--- a/Software/readme
+++ b/Software/readme
@@ -1,1 +1,2 @@
-The project is still ongoing, and the code is not yet complete at this stage. We will first design the code structure, establish an initial implementation plan, and continue to improve it in the future.
+# The project is still ongoing, and the code is not yet complete at this stage. 
+# We will first design the code structure, establish an initial implementation plan, and continue to improve it in the future.
