--- a/Software/readme
+++ b/Software/readme
@@ -1,3 +1,3 @@
 We have completed the simulation and most of the real-world testing for various modules. The relevant test data or debugging records have been stored in the **video** or **debug_recording** directories. For detailed information, please refer to this file. The final integrated code is still in progress.
 
-For security reasons, the code has been encrypted. If you need the password, please contact us.
+For security reasons, the code has been **encrypted**. If you need the password, please contact us.
